# clearsoda

./: README.md  clearsoda-git.kdev4  pyproject.toml
clearsoda/: __init__.py  code.py  codeprimitives.py  helpers.py  operator.py  project.py  scratchproject.py
examples/demonstration/: build.py  demonstration.sb3  main.py
examples/testing/: build.py  main.py  testing.sb3
tools/: helper.sb3  sb3dump.py
